tests/pre_push/projection/snapshots/pre_push__projection__pr_body_generation_v1.snap
---
source: tests/pre_push/projection/mod.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch feature-stack is MANAGED. Syncing stack...
[gherrit] [WARN] Using custom GitHub API URL: [MOCK_SERVER_URL]
[gherrit] Pushing chunk to remote...
[gherrit] Creating 3 PRs...
[gherrit] Created 3 PRs.
[gherrit] Created PR #1: http://github.com/repos/owner/repo/pulls/1
[gherrit] Created PR #2: http://github.com/repos/owner/repo/pulls/2
[gherrit] Created PR #3: http://github.com/repos/owner/repo/pulls/3
[gherrit] Queued update for PR #1: https://github.com/owner/repo/pull/1
[gherrit] Queued update for PR #2: https://github.com/owner/repo/pull/2
[gherrit] Queued update for PR #3: https://github.com/owner/repo/pull/3
[gherrit] Updating batch of 3 PRs...
[gherrit] Batch update complete.
[gherrit] Successfully synced 3 commits.
