tests/pre_push/projection/snapshots/pre_push__projection__pr_body_generation_v1_state.snap
---
source: tests/pre_push/projection/mod.rs
expression: ctx.formatted_github_state()
---
[
  {
    "number": 1,
    "node_id": "PR_1",
    "state": "OPEN",
    "title": "Commit A",
    "body": "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->\n\n\n\n\n---\n\n- 　  #3\n- 　  #2\n- 👉 #1\n\n<details>\n<summary><strong>⬇️ Download this PR</strong></summary>\n\n######\n\n**Branch**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_1] && git checkout -b pr-[GHERRIT_ID_1] FETCH_HEAD\n```\n\n**Checkout**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_1] && git checkout FETCH_HEAD\n```\n\n**Cherry Pick**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_1] && git cherry-pick FETCH_HEAD\n```\n\n**Pull**\n```bash\ngit pull origin refs/heads/[GHERRIT_ID_1]\n```\n\n</details>\n\n*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*\n\n<!-- WARNING: GHerrit relies on the following metadata to work properly. DO NOT EDIT OR REMOVE. --><!-- gherrit-meta: {\"id\":\"[GHERRIT_ID_1]\",\"parent\":null,\"child\":\"[GHERRIT_ID_2]\"} -->",
    "head": "[GHERRIT_ID_1]",
    "base": "main"
  },
  {
    "number": 2,
    "node_id": "PR_2",
    "state": "OPEN",
    "title": "Commit B",
    "body": "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->\n\n\n\n\n---\n\n- 　  #3\n- 👉 #2\n- 　  #1\n\n<details>\n<summary><strong>⬇️ Download this PR</strong></summary>\n\n######\n\n**Branch**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_2] && git checkout -b pr-[GHERRIT_ID_2] FETCH_HEAD\n```\n\n**Checkout**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_2] && git checkout FETCH_HEAD\n```\n\n**Cherry Pick**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_2] && git cherry-pick FETCH_HEAD\n```\n\n**Pull**\n```bash\ngit pull origin refs/heads/[GHERRIT_ID_2]\n```\n\n</details>\n\n*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*\n\n<!-- WARNING: GHerrit relies on the following metadata to work properly. DO NOT EDIT OR REMOVE. --><!-- gherrit-meta: {\"id\":\"[GHERRIT_ID_2]\",\"parent\":\"[GHERRIT_ID_1]\",\"child\":\"[GHERRIT_ID_3]\"} -->",
    "head": "[GHERRIT_ID_2]",
    "base": "[GHERRIT_ID_1]"
  },
  {
    "number": 3,
    "node_id": "PR_3",
    "state": "OPEN",
    "title": "Commit C",
    "body": "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->\n\n\n\n\n---\n\n- 👉 #3\n- 　  #2\n- 　  #1\n\n<details>\n<summary><strong>⬇️ Download this PR</strong></summary>\n\n######\n\n**Branch**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_3] && git checkout -b pr-[GHERRIT_ID_3] FETCH_HEAD\n```\n\n**Checkout**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_3] && git checkout FETCH_HEAD\n```\n\n**Cherry Pick**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_3] && git cherry-pick FETCH_HEAD\n```\n\n**Pull**\n```bash\ngit pull origin refs/heads/[GHERRIT_ID_3]\n```\n\n</details>\n\n*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*\n\n<!-- WARNING: GHerrit relies on the following metadata to work properly. DO NOT EDIT OR REMOVE. --><!-- gherrit-meta: {\"id\":\"[GHERRIT_ID_3]\",\"parent\":\"[GHERRIT_ID_2]\",\"child\":null} -->",
    "head": "[GHERRIT_ID_3]",
    "base": "[GHERRIT_ID_2]"
  }
]
